gcc/testsuite/rust/rustc/ui/error-codes/E0779.rs
#![feature(isa_attribute)]

#[instruction_set(arm::magic)] // { dg-error ".E0779." "" { target *-*-* } }
fn main() {

}

